change css, font size resume

--- a/css/style.less
+++ b/css/style.less
@@ -233,11 +233,12 @@ ul.aboutMe li {
 	ul.resume {
 		background-color: @color-flag;
 		border-radius: 5px;
-		padding: .5em;
+		padding: .75em;
 		float:left;
 		width: auto;		
 	}
 	ul.resume li {
+		font-size: 0.875em;/* 15/16*/
 		padding-left: 1.5em;
 		background: url('../images/icono-mini-archivo-pdf.gif');
 		background-position: left center;
