--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,14 @@ ul.aboutMe li.role {
 #content.resume ul.resume {
   background-color: #b4d92a;
   border-radius: 5px;
-  padding: .5em;
+  padding: .75em;
   float: left;
   width: auto;
 }
 #content.resume ul.resume li {
+  font-size: 0.875em;
+  /* 15/16*/
+
   padding-left: 1.5em;
   background: url('../images/icono-mini-archivo-pdf.gif');
   background-position: left center;
