--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ ul li {
 
 @media print {
     * {
-        background: transparent !important;
+        _background: transparent !important;
         color: #000 !important; /* Black prints faster: h5bp.com/s */
         box-shadow:none !important;
         text-shadow: none !important;
